--- a/CLient/package.json
+++ b/CLient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modern-fashion-store",
+  "name": "sector91-demostore",
   "private": true,
   "version": "0.0.0",
   "type": "module",
